--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PORT=5100
 
-DB_URL = mongodb+srv://hrytsunyk:hrytsunyk@cluster0.vh7aabd.mongodb.net/?retryWrites=true&w=majority
+DB_URL=mongodb+srv://hrytsunyk:hrytsunyk@cluster0.vh7aabd.mongodb.net/?retryWrites=true&w=majority
+
+PASSWORD_SALT=10
